[SPARK-49278] Revise `reconciler` package